# arc-raiders-scripts

./: .gitignore  Cargo.toml  README.md  app.manifest  build.rs
.github/workflows/: auto-tag.yml  release.yml
src/: automation.rs  input.rs  main.rs  state.rs
src/platform/: macos.rs  mod.rs  windows.rs
